<resources>
    <string name="app_name">B&amp;G</string>
    <string name="id">Id</string>
    <string name="status">Estado</string>
    <string name="addres">Dirección</string>
    <string name="receivedDate">Fecha recibido</string>
    <string name="processedDate">Fecha procesado</string>
    <string name="shippedDate">Fecha embarcado</string>
    <string name="deliveredDate">Fecha enviado</string>
    <string name="latitude">Latitud</string>
    <string name="longitude">Longitud</string>
    <string name="image">Imagen</string>
    <string name="login">Ingresar</string>
    <string name="search">Buscar</string>
    <string name="price">Precio</string>
    <string name="categories">Categorías</string>
    <string name="orders">Pedidos</string>
    <string name="order">Pedido</string>
    <string name="quantity">Cantidad</string>
    <string name="sales">Ofertas</string>
    <string name="settings">Ajustes</string>
    <string name="search_hint">Producto&#133;</string>
    <string name="drawer_open">Abrir panel de navegación</string>
    <string name="drawer_close">Cerrar panel de navegación</string>
    <string name="action_websearch">Buscar en la web</string>
    <string name="app_not_available">Lo sentimos, no hay un navegador web disponible</string>
    <string name="title_activity_login">Ingresar</string>
    <string name="prompt_email">Nombre de usuario</string>
    <string name="welcome">Bienvenido</string>
    <string name="change_user">Cambiar de usuario</string>
    <string name="prompt_password">Clave</string>
    <string name="action_sign_in_register">Ingresar</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="not_implemented">Esta acción aún se encuentra implementada</string>
    <string name="category_key">CATEGORY_NAME</string>
    <string name="products">Productos</string>
    <string name="load_products">Cargando productos&#133;</string>
    <string name="splash_loading">Iniciando servicios&#133;</string>
    <string name="load_orders">Cargando ordenes&#133;</string>
    <string name="load_order">Cargando orden&#133;</string>
    <string name="no_network">No hay acceso a internet</string>
    <string name="error_login">Hubo un problema, vuelve a intentarlo</string>
    <string name="must_login">Debe ingresar para poder consultar pedidos</string>
    <string name="loginin">Ingresando&#133;</string>
    <string name="data_not_found">No se encontraron articulos</string>
    <string name="forgot_password">Olvidé mi clave</string>
    <string name="no_qr">Hubo un error en la lectura del código QR</string>
    <string name="product_info">Datos del producto</string>
    <string name="order_info">Datos del pedido</string>
    <string name="elements_info">Ítems del pedido</string>
    <string name="ubication_info">Ubicación del pedido</string>
    <string name="intro_subcategory">Subcategoría</string>
    <string name="size">Talles</string>
    <string name="occasion">Ocasión</string>
    <string name="material">Material</string>
    <string name="brand">Marca</string>
    <string name="gender">Género</string>
    <string name="age">Edad</string>
    <string name="color">Color</string>
    <string name="dialog_button_login">Ingresar</string>
    <string name="pref_send_report">Reportar errores</string>
    <string name="pref_send_report_summary">Permitir el envío de información anónima para corregir errores</string>
    <string name="pref_notif_frequency">Frecuencia de actualización</string>
    <string name="pref_notif_frequency_summary">Selecciona la frecuencia de búsqueda de notificaciones</string>
    <string name="pref_user_name">Newsletter</string>
    <string name="pref_user_name_summary">Introduce tu correo electrónico para recibir las últimas novedades</string>
    <string name="pref_language">Idioma</string>
    <string name="pref_language_summary">Selecciona tu idioma para comprender mejor los textos</string>
    <string name="pref_about_us">Acerca de B&amp;G</string>
    <string name="pref_about_us_summary">Somos B&amp;G. Conoce más sobre nosotros</string>
    <string name="pref_user_profile">Ajustes personales</string>
    <string name="pref_update_setting">Ajustes de la aplicación</string>
    <string name="search_filters_title">Refinar</string>
    <string name="search_filters_apply_button_text">Aplicar</string>
    <string name="search_filters_category_text">Categoría</string>
    <string name="search_filters_location_title">Ubicación</string>
    <string name="search_filters_sorting_header">Ordenamiento</string>
    <string name="search_filters_applied_header">Filtrado por</string>
    <string name="search_filters_unapplied_header">Filtros disponibles</string>
    <string name="menu_item_more_options_default">Más opciones</string>
    <string name="refresh_only_menu_refresh">Actualizar</string>
    <string name="reply_a_question_menu_remove">Eliminar</string>
    <string name="reply_a_question_menu_call">Llamar</string>
    <string name="reply_a_question_menu_email">Correo electrónico</string>
    <string name="search_items_menu_mode">Modo de vista</string>
    <string name="search_items_menu_search">Buscar</string>
    <string name="view_item_menu_bookmark">Favorito</string>
    <string name="restart_app">Reiniciando aplicación por cambios de lenguaje</string>
	<string name="no_data_api">No hay información disponible en la API.</string>
    <string name="calzado">Calzado</string>
    <string name="adulto">Adulto</string>
    <string name="edad">Edad</string>
    <string name="bebe">Bebe</string>
    <string name="infantil">Infantil</string>
    <string name="genero">Genero</string>
    <string name="femenino">Femenino</string>
    <string name="masculino">Masculino</string>
    <string name="indumentaria">Indumentaria</string>
    <string name="accesorios">Accesorios</string>
    <string name="alpargatas">Alpargatas</string>
    <string name="balerinas">Balerinas</string>
    <string name="borcegos">Borcegos</string>
    <string name="botas">Botas</string>
    <string name="mocasines">Mocasines</string>
    <string name="ojotas">Ojotas</string>
    <string name="sandalias">Sandalias</string>
    <string name="zapatillas">zapatillas</string>
    <string name="zapatos">Zapatos</string>
    <string name="pantuflas">Pantuflas</string>
    <string name="zuecos">Zuecos</string>
    <string name="blazers">Blazers</string>
    <string name="buzos">Buzos</string>
    <string name="calzas">Calzas</string>
    <string name="campera">Campera</string>
    <string name="camisas">Camisas</string>
    <string name="cardigans">Cardigans</string>
    <string name="chalecos">Chalecos</string>
    <string name="jeans">Jeans</string>
    <string name="pantalones">Pantalones</string>
    <string name="pilotos">Pilotos</string>
    <string name="polleras">Polleras</string>
    <string name="sacos">Sacos</string>
    <string name="sweaters">Sweaters</string>
    <string name="vestidos">Vestidos</string>
    <string name="anteojos">Anteojos</string>
    <string name="remeras">Remeras</string>
    <string name="aros">Aros</string>
    <string name="billeteras">Billeteras</string>
    <string name="carteras">Carteras</string>
    <string name="cinturones">Cinturones</string>
    <string name="collares">Collares</string>
    <string name="gorras">Gorras</string>
    <string name="llaveros">Llaveros</string>
    <string name="mochilas">Mochilas</string>
    <string name="pulseras">Pulseras</string>
    <string name="relojes">Relojes</string>
    <string name="estilo_jeans">Estilo-Jeans</string>
    <string name="estilo_pantalones">Estilo-Pantalones</string>
    <string name="marca">Marca</string>
    <string name="material_accesorios">Material-Accesorios</string>
    <string name="material_blazers">Material-Blazers</string>
    <string name="material_buzos">Material-Buzos</string>
    <string name="material_calzado">Material-Calzado</string>
    <string name="material_calzas">Material-Calzas</string>
    <string name="material_camisas">Material-Camisas</string>
    <string name="material_camperas">Material-Camperas</string>
    <string name="material_cardigans">Material-Cardigans</string>
    <string name="material_chalecos">Material-Chalecos</string>
    <string name="material_jeans">Material-Jeans</string>
    <string name="material_pantalones">Material-Pantalones</string>
    <string name="material_pilotos">Material-Pilotos</string>
    <string name="material_polleras">Material-Polleras</string>
    <string name="nuevo">Nuevo</string>
    <string name="oferta">Oferta</string>
    <string name="ocasion">Ocasion</string>
    <string name="talle_blazer">Talle-Blazer</string>
    <string name="talle_blazers">Talle-Blazers</string>
    <string name="talle_buzos">Talle-Buzos</string>
    <string name="talle_calzado">Talle-Calzado</string>
    <string name="talle_calzas">Talle-Calzas</string>
    <string name="talle_camisas">Talle-Camisas</string>
    <string name="talle_camperas">Talle-Camperas</string>
    <string name="talle_cardigans">Talle-Cardigans</string>
    <string name="talle_chalecos">Talle-Chalecos</string>
    <string name="talle_jeans">Talle-Jeans</string>
    <string name="talle_pantalones">Talle-Pantalones</string>
    <string name="talle_pilotos">Talle-Pilotos</string>
    <string name="talle_polleras">Talle-Polleras</string>
    <string name="casual">Casual</string>
    <string name="deporte">Deporte</string>
    <string name="formal">Formal</string>
    <string name="fiesta">Fiesta</string>
    <string name="oficina">Oficina</string>
    <string name="playa">Playa</string>
    <string name="vestir">Vestir</string>
    <string name="azul">Azul</string>
    <string name="beige">Beige</string>
    <string name="blanco">Blanco</string>
    <string name="bordo">Bordo</string>
    <string name="carey">Carey</string>
    <string name="celeste">Celeste</string>
    <string name="chocolate">Chocolate</string>
    <string name="coral">Coral</string>
    <string name="dorado">Dorado</string>
    <string name="fucsia">Fucsia</string>
    <string name="gris">Gris</string>
    <string name="marron">Marron</string>
    <string name="multicolor">Multicolor</string>
    <string name="naranja">Naranja</string>
    <string name="natural">Natural</string>
    <string name="negro">Negro</string>
    <string name="oro">Oro</string>
    <string name="plata">Plata</string>
    <string name="rojo">Rojo</string>
    <string name="rosa">Rosa</string>
    <string name="suela">Suela</string>
    <string name="verde">Verde</string>
    <string name="violeta">Violeta</string>
    <string name="charol">Charol</string>
    <string name="cuero">Cuero</string>
    <string name="gamuza">Gamuza</string>
    <string name="lona">Lona</string>
    <string name="sintetico">Sintetico</string>
    <string name="tela">Tela</string>
    <string name="cuero_ecologico">Cuero ecologico</string>
    <string name="cuero_sintetico">Cuero sintetico</string>
    <string name="algodon">Algodon</string>
    <string name="lycra">Lycra</string>
    <string name="polyester">Polyester</string>
    <string name="gabardina">Gabardina</string>
    <string name="polar">Polar</string>
    <string name="notification_onupdate">Se encontraron actualizaciones.</string>
    <string name="notification_onupdate_nonew">No se encontraron actualizaciones.</string>
    <string name="notification_error">Error en las actualizaciones.</string>
    <string name="notification_error_notloggedin">No se encuentra ningún usuario logueado.</string>
    <string name="notification_order">Pedido</string>
    <string name="notification_order_new">realizado</string>
    <string name="notification_order_updatedlocation">localización actualizada</string>
    <string name="notification_order_updatedstatus">estado actualizado</string>
    <string name="notification_status_created">creado</string>
    <string name="notification_status_confirmed">confirmado</string>
</resources>