<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
    <PreferenceCategory android:title="@string/pref_user_profile" >
        <EditTextPreference
                android:title="@string/pref_user_name"
                android:summary="@string/pref_user_name_summary"
                android:key="prefUsername"/>
        <ListPreference
            android:key="Language"
            android:entries="@array/Language"
            android:summary="@string/pref_language_summary"
            android:entryValues="@array/LanguageValues"
            android:title="@string/pref_language" />
    </PreferenceCategory>
     
    <PreferenceCategory android:title="@string/pref_update_setting" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefSendReport"
            android:summary="@string/pref_send_report_summary"
            android:title="@string/pref_send_report" >
        </CheckBoxPreference>
 
        <ListPreference
            android:key="prefNotifFreq"
            android:entries="@array/notifFrequency"
            android:summary="@string/pref_notif_frequency_summary"
            android:entryValues="@array/notifFrequencyValues"
            android:title="@string/pref_notif_frequency" />
        
        <EditTextPreference
                android:title="@string/pref_about_us"
                android:summary="@string/pref_about_us_summary"
                android:key="aboutUs"/>
    </PreferenceCategory>
 
    
    
</PreferenceScreen>