<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ordercontainer"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".OrderViewActivity" >

    <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:progressDrawable="@drawable/pbar_style" />
    
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/ubication_info"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/bgcolor"
                android:typeface="sans" />

            <View style="@style/Divider" />

            <fragment
                android:id="@+id/map"
                android:layout_width="wrap_content"
                android:layout_height="400dp"
                class="com.google.android.gms.maps.SupportMapFragment" />

            <TextView
                android:id="@+id/tvheaderhist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/order_info"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/bgcolor"
                android:typeface="sans" />

            <View style="@style/Divider" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:shrinkColumns="*"
                android:stretchColumns="*" >

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" >

                    <TextView
                        android:id="@+id/view_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/price"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:typeface="sans" />

                    <TextView
                        android:id="@+id/priceVal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" >

                    <TextView
                        android:id="@+id/view_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/quantity"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:typeface="sans" />

                    <TextView
                        android:id="@+id/quantityVal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" >

                    <TextView
                        android:id="@+id/view_proccesed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/processedDate"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:typeface="sans" />

                    <TextView
                        android:id="@+id/proccesedVal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" >

                    <TextView
                        android:id="@+id/view_shipped"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/shippedDate"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:typeface="sans" />

                    <TextView
                        android:id="@+id/shippedVal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" >

                    <TextView
                        android:id="@+id/view_delivered"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/deliveredDate"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:typeface="sans" />

                    <TextView
                        android:id="@+id/deliveredVal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" >

                    <TextView
                        android:id="@+id/view_received"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/receivedDate"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:typeface="sans" />

                    <TextView
                        android:id="@+id/receivedVal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp" />
                </TableRow>
            </TableLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/elements_info"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/bgcolor"
                android:typeface="sans" />

            <View style="@style/Divider" />

            <ListView
                android:id="@+id/orderlist"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:cacheColorHint="@color/white"
                android:choiceMode="singleChoice" >
            </ListView>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>